--- a/改进.md
+++ b/改进.md
@@ -1,46 +1,28 @@
-好的，分析了您提供的代码后，我发现了一些可以改进的耦合点。遵循您“由点及面”的思路，我将从最具体、最容易修改的问题开始，逐步扩展到影响面更广的架构性问题。
+|优先级|重构建议|性价比 (回报/投入)|难度|涉及文件 (主要)|修改思路与详解|
+|---|---|---|---|---|---|
+|**1**|**引入依赖注入 (DI) 容器**|**极高**|中等|• `src/main.ts`<br>• `src/core/services/*`<br>• `src/features/*/index.ts`|**思路**: <br>1. 选择一个轻量级的DI库，例如 `tsyringe` 或 `typedi`。<br>2. 使用 `@injectable()` 或 `@Service()` 装饰器标记所有 `Service` 类。<br>3. 在 `main.ts` 中，不再手动 `new` 服务，而是从DI容器中 `resolve` (解析) 出顶层服务 (如 `RendererService`, `DataStore` 等)。<br>4. 服务之间的依赖关系通过构造函数参数类型自动注入。这彻底解耦了服务的创建和使用，是架构标准化的核心。<br><br>**示例 (使用 tsyringe):**<br>`typescript<br>// In a service file<br>import { injectable, inject } from "tsyringe";<br><br>@injectable()<br>export class RendererService {<br> constructor(<br> private dataStore: DataStore,<br> private appStore: AppStore<br> // ... other services<br> ) {}<br>}<br><br>// In main.ts<br>import "reflect-metadata";<br>import { container } from "tsyringe";<br><br>async onload() {<br> //...<br> // 注册实例 (如 plugin, app)<br> container.registerInstance(ThinkPlugin, this);<br> //...<br> // 解析顶层服务<br> this.dataStore = container.resolve(DataStore);<br> this.rendererService = container.resolve(RendererService);<br> // ...<br>}<br>`|
+|**2**|**强化领域模型 (Domain) 的唯一真源**|**高**|低|• `src/core/domain/*`<br>• `src/features/dashboard/styles/global.ts`|**思路**:<br>1. **文件合并**: 将 `categoryColorMap.ts` 的内容合并到 `fields.ts` 或一个新建的 `definitions.ts` 中。颜色本身是字段的一种元数据。<br>2. **常量聚合**: 将 `constants.ts` 中与领域模型强相关的常量（如 `BLOCK_NAMES`, `FIELD_KEYS`）移入 `fields.ts` 或 `schema.ts`，让它们和定义在一起。UI相关的常量（如 `LOCAL_STORAGE_KEYS`）可以保留。<br>3. **CSS源**: 将 `GLOBAL_CSS` 从 `constants.ts` 移动到其所属的 `dashboard` feature 目录下的 `styles` 子目录中 (你已经这样做了，非常好！)。<br>4. **创建 Barrel File**: 在 `src/core/domain/index.ts` 中导出该目录下所有模块，使得其他地方可以用 `import { ... } from '@core/domain'` 统一导入。|
+|**3**|**服务层职责再划分**|**中高**|中等|• `src/core/services/*`<br>• `src/platform/obsidian.ts`<br>• `src/main.ts`|**思路**:<br>1. **改造 `TaskService`**: `TaskService` 的职责应该是**唯一**修改 Markdown 文件中任务内容的服务。你已经将 `markItemDone` 的实现委托给了它，这是正确的方向。确保所有对任务行（如时间、时长修改）的操作都通过 `TaskService`。<br>2. **`DataStore` 纯粹化**: `DataStore` 的核心职责是 **读取和缓存** 数据，提供查询接口。它不应该直接修改文件。当文件变更时，它通过 `scanFile` 来更新自己的缓存。当前 `markItemDone` 的重构已经体现了这一点。<br>3. **`ActionService` 定位**: 将 `ActionService` 定位为一个“协调者”或“用例”层。它负责响应用户操作，从 `AppStore` 获取配置，调用 `TaskService` 或 `TimerService` 等执行具体操作，但它自己不实现核心业务逻辑。<br>4. **消除静态方法/单例依赖**: 将 `TaskService`, `TimerService`, `TimerStateService` 从包含静态方法的类改为需要实例化注入的普通类。这使得依赖关系更明确，也更易于测试。（你已完成此项，代码已体现）|
+|**4**|**标准化 Feature 模块结构**|**中**|低|• `src/features/*`<br>• `src/main.ts`|**思路**:<br>1. **统一入口**: 确保每个 `feature` 目录（如 `dashboard`, `quick-input`）都有一个 `index.ts` 文件，并导出一个 `setup(deps)` 函数。这个函数接收所有该功能模块需要的依赖（服务、插件实例等）。<br>2. **内部结构**: 在每个 `feature` 目录内部，可以建立标准的子目录结构，例如：<br> - `ui/`: 存放所有UI组件 (React/Preact)。<br> - `logic/`: 存放该功能的逻辑，如命令注册 (`registerCommands.ts`)、事件监听器 (`VaultWatcher.ts`) 等。<br> - `styles/`: 存放该功能独有的CSS。<br>3. **依赖传递**: 在 `main.ts` 中，调用每个 `feature` 的 `setup` 函数，并通过DI容器传入所需的依赖，而不是手动传递一个巨大的 `context` 对象。|
+|**5**|**统一`core`层出口**|**高**|**极低**|• `src/core/index.ts`<br>• (所有引用core内模块的文件)|**思路**:<br>1. 在你已经创建的 `src/core/index.ts` 文件中，全面导出 `services`, `domain`, `utils` 等所有核心层的公共模块。<br>2. 在 `tsconfig.json` 中配置路径别名，例如 `{"@core/*": ["src/core/*"]}`。<br>3. 在所有 `features` 和其他文件中，将复杂的相对路径导入改为统一的别名导入，如 `import { DataStore } from '@core/services'`。这极大提升了代码的可读性和可维护性。|
+|**6**|**UI组件与状态解耦**|**中**|中高|• `src/features/*/ui/*`<br>• `src/state/AppStore.ts`|**思路 (长期优化)**:<br>1. **自定义Hooks**: 将复杂的UI逻辑（如 `useViewData`）抽取为自定义Hook，这使得组件本身更专注于渲染。你已经这么做了，非常棒。<br>2. **避免在组件中直接调用Store**: 在设置页面等地方，组件直接调用 `appStore.updateSomething()`。这在当前规模是可行的。对于更大型的项目，可以考虑引入类似 Redux 的 `dispatch(action)` 模式。`AppStore` 只暴露一个 `dispatch` 方法，所有修改操作都封装成 `Action` 对象，由 `AppStore` 内部的 `reducer` 处理。这会增加代码量，但能让状态变更的追溯和管理变得极为清晰。<br>**当前建议**: 保持现状，但在添加新功能时，优先考虑将复杂的状态逻辑封装在 `AppStore` 的方法中，而不是在UI组件中实现。|
 
-以下是用表格形式对这些耦合点的分析说明：
+### 建议的实施步骤 (渐进式)
 
-### 代码耦合点分析与重构建议
-
-| 不当耦合点 (Improper Coupling Point) | 应该分离的层/关注点 (Layer/Concern to Separate) | 涉及文件 (Involved Files) | 修改难度 (Difficulty) | 性价比 (Cost-Effectiveness) | 建议修改方案 (Suggested Refactoring) |
-| :--- | :--- | :--- | :--- | :--- | :--- |
-| **1. UI组件直接调用数据层方法**\<br\>UI组件（如`BlockView`, `TableView`）直接依赖并调用`DataStore`的**单例**方法来修改数据，例如 `DataStore.instance.markItemDone()`。 | **视图层 (View) 与 数据服务层 (Data Service)** | • `BlockView.tsx`\<br\>• `TableView.tsx`\<br\>• `dataStore.ts` | **低** | **高** | 在 `LayoutRenderer` 中定义 `onMarkItemDone` 函数，并通过 props 将其传递给 `BlockView` 和 `TableView`。这样，UI组件只负责调用传入的函数，而不知道具体是哪个Store在执行操作，便于未来替换或测试。 |
-| **2. 服务层直接实例化UI组件**\<br\>`ActionService`在其方法中直接`new QuickInputModal(...)`，强耦合了核心服务逻辑与具体的UI弹窗实现。 | **核心服务层 (Core Service) 与 UI/特性层 (UI/Feature)** | • `ActionService.ts`\<br\>• `QuickInputModal.tsx` | **中** | **中** | `ActionService`的方法不应返回UI实例。它可以返回一个Promise或触发一个全局事件。由调用方（通常是UI层，如`LayoutRenderer`）来决定如何响应，例如打开哪个Modal。这样服务层就不再关心UI的具体实现。 |
-| **3. 服务层之间互相直接依赖和实例化**\<br\>• `TimerService` 内部直接创建 `new InputService(app)`。\<br\>• `ActionService`, `TaskService`, `TimerService` 都直接访问 `DataStore.instance` 和 `AppStore.instance` 全局单例。 | **服务层内部解耦** | • `ActionService.ts`\<br\>• `TimerService.ts`\<br\>• `TaskService.ts`\<br\>• `dataStore.ts`\<br\>• `AppStore.ts` | **中** | **高** | **依赖注入 (Dependency Injection)**：在`main.ts`中统一创建所有服务实例。然后通过**构造函数**将一个服务所需的其他服务实例传递进去，而不是在服务内部创建或访问全局单例。这能清晰地展示服务间的依赖关系，并极大地简化测试。 |
-| **4. "上帝对象" `ThinkPlugin` 实例被到处传递**\<br\>主插件实例 `this` (实现了 `ThinkContext` 接口) 被完整地传递给多个服务和功能模块的 `setup` 函数。 | **插件生命周期 与 核心业务逻辑** | • `main.ts`\<br\>• `RendererService.ts`\<br\>• `FloatingTimerWidget.ts`\<br\>• `dashboard/index.ts`\<br\>• `quick-input/index.ts` | **中** | **高** | **按需传递依赖**：不要传递整个 `plugin` 或 `ThinkContext` 对象。哪个模块需要什么，就只给它传递什么。例如，`RendererService` 的构造函数可以改为 `constructor(app, dataStore, appStore)`，而不是 `constructor(plugin, ...)`。 |
-| **5. UI渲染组件中包含大量业务逻辑**\<br\>`LayoutRenderer.tsx` 中包含了大量关于数据筛选、排序和日期范围计算的逻辑 (`useMemo` 块中)。 | **视图渲染 (Rendering) 与 数据处理 (Data Processing)** | • `LayoutRenderer.tsx`\<br\>• `itemFilter.ts` | **中** | **高** | **创建自定义Hook**：将数据处理逻辑封装到一个自定义Hook中，例如 `useViewData(viewInstance, layoutDate, layoutView, kw)`。`LayoutRenderer` 只需调用这个Hook获取最终要渲染的数据 `viewItems` 即可。这让组件本身更专注于UI渲染，逻辑更清晰。 |
-| **6. 贯穿整个应用的全局单例模式**\<br\>大量使用 `DataStore.instance` 和 `AppStore.instance`，导致任何模块都可以随意访问和修改全局状态。这是之前您修改 `store` 崩溃的**根本原因**。 | **全局状态管理 与 模块化** | 几乎所有文件 | **高** | **极高** | 这是最核心的重构点。目标是**消除所有 `.instance` 调用**。全面采用**依赖注入**（见第3点），将 `DataStore` 和 `AppStore` 的实例从顶层(`main.ts`)注入到需要它们的模块中。这是一个大手术，但能从根本上解决“牵一发而动全身”的问题。 |
-
------
-
-### 从“点”到“面”的重构策略
-
-根据您的要求，我们可以按以下顺序进行，风险和影响范围从小到大：
-
-1.  **第一步 (点)：清理UI层**
-
-      * **目标**：先拿`BlockView`开刀，修改**耦合点 \#1**。
-      * **操作**：在 `LayoutRenderer.tsx` 中创建 `handleMarkDone` 函数，把它作为prop传给 `BlockView`。`BlockView` 内部再传给 `TaskItem`，最终 `TaskCheckbox` 调用这个prop函数。
-      * **影响**：只会影响 `LayoutRenderer`, `BlockView`, `TaskItem` 这几个文件，逻辑清晰，风险极低。成功后，可用同样方法改造 `TableView`。
-
-2.  **第二步 (线)：清理服务层**
-
-      * **目标**：解决**耦合点 \#2、\#3**。
-      * **操作**：
-          * 从 `TimerService` 中移除 `new InputService()`。在 `main.ts` 中创建 `inputService`，并将其作为参数传给需要它的 `TimerService` 方法。
-          * 改造 `ActionService`，让它的构造函数接收 `appStore` 和 `dataStore` 作为参数：`constructor(app, appStore, dataStore)`。在 `main.ts` 中创建实例时把它们传进去。
-      * **影响**：开始触及服务层，但改动是局部的。比如改造 `ActionService` 只需修改 `main.ts` 和 `ActionService.ts` 两个文件。
-
-3.  **第三步 (面)：重构核心架构**
-
-      * **目标**：解决**耦合点 \#4、\#5、\#6**。
-      * **操作**：
-          * **梳理依赖**：列出每个服务和UI组件到底需要哪些具体的依赖（`app`, `dataStore`, `appStore`等）。
-          * **重构 `main.ts`**：在这里作为“装配中心”，创建所有服务实例，并手动处理它们之间的依赖关系。
-          * **移除 `ThinkContext` 和 `this` 传递**：修改所有接收 `plugin` 或 `ctx` 的地方，改为接收具体的服务实例。
-          * **移除所有 `.instance`**：这是最后一步，也是最关键的一步。全局搜索 `DataStore.instance` 和 `AppStore.instance`，将它们替换为通过构造函数或props传入的实例。
-      * **影响**：这是全局性的重构，涉及面广，需要小心进行，但完成后代码的健壮性和可维护性会得到质的飞跃。
-
-通过这种循序渐进的方式，您可以逐步改善代码质量，同时将每次修改的风险控制在可预见的范围内。
+1. **第1步 (简单整理 - 1小时)**:
+    
+    - 完成 **建议 #5 (统一`core`层出口)** 和 **建议 #2 (强化领域模型)**。这两项改动风险小，主要是文件移动和路径修改，能立刻提升代码整洁度。
+        
+2. **第2步 (核心改造 - 4-6小时)**:
+    
+    - 实施 **建议 #1 (引入DI容器)**。这是最核心的一步。一旦完成，整个项目的依赖关系将变得清晰无比，后续的重构会非常顺畅。你需要耐心修改所有服务的构造函数和 `main.ts` 的初始化逻辑。
+        
+3. **第3步 (逻辑优化 - 2-3小时)**:
+    
+    - 基于新的DI架构，审视并完成 **建议 #3 (服务层职责再划分)**。确保文件读写、状态管理、业务逻辑的边界清晰。
+        
+    - 同时完成 **建议 #4 (标准化Feature模块结构)**，让 `main.ts` 变得极其简洁，只负责组装和启动。
+        
+4. **第4步 (持续迭代)**:
+    
+    - 在未来的开发中，时刻谨记 **建议 #6 (UI与状态解耦)** 的原则，保持UI组件的纯粹性。
