--- a/docs/2025-11-22 修改计划.md
+++ b/docs/2025-11-22 修改计划.md
@@ -1,3 +1,10 @@
+# 重构计划与进度追踪 (2025-11-24 更新)
+
+> [!summary] **当前状态**
+> - **核心重构**：进行中
+> - **文档化**：进行中
+> - **入口清理**：已完成
+
 先说一句实话：你这套已经是“中大型插件架构”级别了，整体分层是清晰的，只是**信息密度太大**，第一次看的人脑子会很累。下面我就按“怎么降低认知成本”来给你做一个结构化的建议，尽量对应到你现在这套代码里可以怎么改/怎么用。
 
 ---
@@ -23,6 +30,10 @@
 ---
 
 ## 二、入口 & 启动流程：把“剧本”写清楚
+
+> [!success] **已完成 (2025-11-24)**
+> - `src/main.ts` 已清理，移除了 Polyfill 代码。
+> - 启动逻辑已模块化，Polyfill 移至 `src/core/polyfills.ts`。
 
 ### 1. 让入口文件真正像“目录页”
 
@@ -67,6 +78,10 @@ async bootstrap() {
 ---
 
 ## 三、给三种核心角色写“说明书”
+
+> [!success] **已完成 (2025-11-24)**
+> - `src/core/services/DataStore.ts`: 已添加标准 JSDoc，明确 Service 职责。
+> - `src/app/AppStore.ts`: 已添加标准 JSDoc，明确 Store 职责。
 
 你的代码里其实已经有三个很清晰的角色：
 
@@ -309,6 +324,9 @@ FeatureLoader 或 UIFeatureManager
 未来增加新 Feature 时，只改 FeatureLoader，不会动到核心服务初始化逻辑
 
 2. 把“启动配置”抽成独立模块
+
+> [!info] **进度 (2025-11-24)**
+> - 已检查 `src/core/di/setupCore.ts`，DI 容器配置已独立。
 
 在 ThinkPlugin.onload 里，现在做了不少事情：
 
