ai对话记录任务

--- a/docs/2025-11-24 修改计划.md
+++ b/docs/2025-11-24 修改计划.md
@@ -1,96 +1,649 @@
-根据你提供的完整代码和已有重构进展，我已经给出一套完整的分层与解耦方案，针对 `src/features/views` 与 `src/core` 的职责划分如下，并结合你当前目录和实现做了具体落地设计：
 
-1. 总体架构目标
-- `features/views/*View.tsx`：仅负责视图模式切换、布局（行列、折叠、响应式）、调用 core 纯函数和 shared UI 组件，不再写复杂业务逻辑。
-- `core`：承载所有与业务相关的“工具逻辑”，包括视图配置、数据聚合、rating 映射、时间范围计算等纯函数。
-- `shared/ui`：承载可复用 UI 组件，如 Task 行、字段 pill、heatmap 单元格、统计图块等，只依赖 schema 类型和简单 util。
 
-2. 已完成的解耦
-- Heatmap 视图：
-  - `src/core/config/heatmapViewConfig.ts`：Heatmap 默认配置与 `isImagePath` / `isHexColor` 工具。
-  - `src/core/utils/heatmapTemplate.ts`：从 InputSettings/BlockTemplate/ThemeOverride 计算有效模板 + rating 映射，封装在 `RatingMappingCache`。
-  - `src/core/utils/heatmapAggregation.ts`：按 themePath+date 聚合为 `Map<string, Map<string, Item[]>>`，构建 `themesByPath` 映射和按 theme 收集 items。
-  - `src/shared/ui/heatmap/HeatmapCell.tsx`：封装 Heatmap 的单元格 UI 和业务逻辑（打卡次数、等级次数、visualValue、tooltip 文案等）。
-  - `src/features/views/HeatmapView.tsx`：已瘦身为仅进行：
-    - config 合并（`DEFAULT_CONFIG + module.viewConfig`）
-    - 主题行循环、折叠状态、布局（行布局/网格布局）
-    - 调用 core 聚合函数与 `HeatmapCell`，不再内联 rating 解析/数据聚合/tooltip 文案。
+# AI 自然语言快捷输入实现计划
 
-- Block / Table 视图：
-  - `src/shared/ui/items/FieldPill.tsx`：通用字段 pill 渲染（tags/categoryKey/pintu/普通字段），替代 BlockView 的内联 FieldRenderer。
-  - `src/shared/ui/items/TaskRow.tsx`：统一任务行渲染（TaskCheckbox + 链接 + Timer 按钮 + 可选字段），用于 BlockView/TableView，两者不再重复写任务渲染。
-  - `src/shared/ui/items/ItemLink.tsx`：封装 `makeObsUri(item, app)`，统一 Item 链接行为。
-  - `BlockView.tsx`：改为依赖 FieldPill/TaskRow/ItemLink，仅负责：
-    - 是否窄屏（ResizeObserver 控制 isNarrow）
-    - 分组与折叠（用 `groupItemsByField` / `getSortedGroupKeys` + `collapsedGroups`）
-    - 渲染 Task 用 TaskRow，渲染 Block 用 BlockItem（内部组合 FieldPill+ItemLink）。
-  - `TableView.tsx`：改为用 TaskRow/ItemLink 渲染每个 cell item，仅保留：
-    - `buildTableMatrix` 得到 matrix/sortedRows/sortedCols
-    - 表格结构本身。
+目标：  
+在现有 Think 插件（Block + Theme + 字段配置 + 快速输入）的基础上，实现统一的「AI 自然语言 → 自动选择合适 Block/Theme → 自动填字段 → 显示确认 UI → 保存」能力，并提供 AI 设置页面控制行为与性能。
+第一步：把 AI “接入设置与类型体系”，并在 UI 中可配置
 
-- 统计视图准备：
-  - `src/core/utils/statisticsAggregation.ts`：封装 Statistics 的 period 聚合逻辑，包括：
-    - 基于 DateRange / period 字段的 day/week/month/quarter/year 聚合。
-    - 使用 `getBaseCategory(item.categoryKey)` 且只统计配置 categories 中的分类。
-  - `src/shared/ui/statistics/ChartBlock.tsx`：从原 StatisticsView 提取出的通用图块组件，内部包含：
-    - 智能 height 算法：支持 smart/linear/logarithmic，根据数据分布自动调整柱状高度，并保证最小可见高度。
-    - 统一结构（上数字、中柱状、下类别），单击整个块或单个分类柱时触发对应 onCellClick 回调。
+产出：settings.aiSettings 正式存在；设置页出现 “AI” Tab；用户可配置 endpoint/model/key、启用哪些 blocks、多结果行为、缓存等。
 
-3. 针对各视图的后续解耦方案（已经详细设计）
-- StatisticsView：
-  - 删除内部内联的 ChartBlock，改为导入 `@shared/ui/statistics/ChartBlock`。
-  - 顶层构造 CategoryConfig 数组（name/color/alias），统一传给 core 聚合和 ChartBlock。
-  - 各视图模式调用 core 聚合：
-    - 天视图：`aggregateByDay(items, selectedDate, categoryConfigs, usePeriod)`
-    - 周视图：`aggregateByWeek(items, weekStart, weekEnd, categoryConfigs, usePeriod)`
-    - 月视图：`aggregateByMonth(...)` + `getMonthWeeksData(...)`
-    - 季视图：`aggregateByQuarter(...)` + 对应月份和周的 `aggregateByMonth` / `getMonthWeeksData`
-    - 年视图：`aggregateByYear(...)`，返回 year/quarters/months/weeks 的 PeriodData 列表。
-  - Popover 暂时保留在 StatisticsView 内，只负责 UI 和 BlockView 渲染，后续可抽到 `shared/ui/statistics/StatisticsPopover.tsx` 进一步复用。
+1.1 新增 AI 类型文件并挂到 ThinkSettings
 
-- TimelineView：
-  - 在 `src/core/utils/timelineAggregation.ts` 中集中 timeline 相关业务逻辑：
-    - 将 `mapTaskToCategory` 和目前年/季模式 summary useMemo 中的聚合逻辑，封装为：
-      - `buildMonthlyAndWeeklySummary(timelineTasks, config)`：生成 `TimelineSummaryTable` 所需的 summaryData。
-      - `buildSummaryCategoryHours(timelineTasks, dateRange, config)`：计算当前视图汇总条 `summaryCategoryHours`。
-      - `buildDailyCategoryHours(blocks, categoriesConfig, untrackedLabel)`：提供给每日头部进度条 `DayColumnHeader`。
-  - 在 `src/shared/ui/timeline` 下拆出 UI：
-    - `ProgressBlock.tsx`：从 TimelineView 中抽离现有实现，用于日/周/月/年 summary 的时间分布条。
-    - `TimelineSummaryTable.tsx`：渲染 summaryData 表格（月份 + 月度 summary + 每周 summary）。
-    - `DayColumnHeader.tsx`：按日显示头部标题 + ProgressBlock。
-    - `DayColumnBody.tsx`（可选拆）：渲染纵向时间轴和 TaskBlock，支持传入 `onEditTask`/`onAlignPrev`/`onAlignNext` 宿主回调。
-  - 完成后 TimelineView.tsx 仅负责：
-    - 计算 `timelineTasks`（调用现有 timeline-parser）
-    - 调用 core 的 aggregation 函数
-    - 选择用 SummaryTable 模式（年/季）还是每日时间轴模式（天/周/月）
-    - 处理缩放/触控/点击创建任务等视图交互。
+新增文件： src/core/types/ai-schema.ts
 
-- TimeNavigator / ViewToolbar：
-  - 将 TimeNavigator 顶部定义的 `getWeeksInYear` / `getMondayByWeek` / `getWeekRangeStr` 等时间工具移动到 `@core/utils/date` 或单独 `timeNavigator` util 中，TimeNavigator 只 import 使用，使 features/views 文件内只剩纯视图逻辑。
-  - ViewToolbar 已经比较轻量，仅需要时可以把视图选项常量 `['年','季','月','周','天']` 放到 `@core/config/viewConfigs` 中统一，引入使用。
+建议最终类型（比你原稿更贴合现有工程）：
 
-4. 目录和命名规范建议
-- `src/core/config`
-  - `viewConfigs.ts`：集中所有视图默认配置（StatisticsView / TimelineView / HeatmapView 等）。
-  - 可继续保留或合并 `heatmapViewConfig.ts`。
-- `src/core/utils`
-  - `itemGrouping.ts`, `itemFilter.ts`：已有。
-  - `statisticsAggregation.ts`, `dataAggregation.ts`：统计聚合。
-  - `heatmapAggregation.ts`, `heatmapTemplate.ts`：Heatmap 相关工具。
-  - `timelineAggregation.ts`：Timeline 聚合。
-  - `date.ts`：通用日期相关工具，包括给 TimeNavigator 的 week/year 相关函数。
-- `src/shared/ui`
-  - `items/`：`TaskRow`, `FieldPill`, `ItemLink`, 后续的 TagList/CategoryBadge 等。
-  - `heatmap/`：`HeatmapCell` 等。
-  - `statistics/`：`ChartBlock`, 后续的 `StatisticsPopover` 等。
-  - `timeline/`：`ProgressBlock`, `TimelineSummaryTable`, `DayColumnHeader`, `DayColumnBody` 等。
+export interface AiSettings {
+  enabled: boolean;
 
-5. 效果
-按此方案推进后：
-- `src/features/views` 所有视图文件均达到“更纯净、更解耦”的目标：
-  - 不再直写复杂的聚合/映射/tooltip 文案逻辑。
-  - 多视图之间共用 Task/字段 UI、heatmap cell、统计图块等，显著减少重复。
-- `src/core` 集中承载业务规则，更易于在未来增加新的视图或统计报表时复用。
-- `src/shared/ui` 为视图提供一致的 UI 语言，视图只负责布局和组合，不关心内部的绘制细节。
+  // OpenAI-compatible（你接 Gemini/自建转发都可）
+  provider: 'openai_compat';
+  apiEndpoint: string;  // baseURL，例如 https://xxx/v1
+  apiKey: string;
+  model: string;
+  temperature: number;
+  maxTokens: number;
+  requestTimeoutMs: number;
 
-你可以按此方案，优先完成 StatisticsView 的聚合切换和 ChartBlock 替换，然后逐步拆 TimelineView 和 TimeNavigator 的工具逻辑。如果需要在下一步直接对某个具体文件（例如 `StatisticsView.tsx`）做代码级改造，可以在后续任务中基于此方案继续实施。
+  // block/theme 选择策略
+  enabledBlockIds?: string[]; // 优先用它过滤 snapshot；为空=全部参与
+  defaultThemeId?: string;
+
+  // 多结果与确认策略
+  allowMultipleResults: boolean;
+  maxResults: number;
+  confirmMode: 'single' | 'batch'; // 先实现 single + batch逐条确认（仍属于batch）
+
+  // 性能
+  preloadConfigOnStartup: boolean;
+  configCacheTTLSeconds: number;
+}
+
+export interface NaturalRecordCommand {
+  rawText: string;
+  target: { blockId: string; themeId?: string };
+  fieldValues: Record<string, any>; // 不要 string，兼容 select/rating 等
+  meta?: { confidence?: number; reason?: string };
+}
+
+export interface NaturalRecordBatch {
+  items: NaturalRecordCommand[];
+}
+
+
+修改文件： src/core/types/schema.ts
+
+在 ThinkSettings 增加：aiSettings?: AiSettings
+
+在 DEFAULT_SETTINGS 中追加默认值（沿用你现在“干净默认”风格）
+
+你的持久化是直接存 settings；旧数据缺字段时靠 DEFAULT_SETTINGS 兜住即可。
+
+1.2 设置页增加 AI Tab
+
+修改文件： src/features/settings/SettingsTab.tsx
+
+Tabs 增加 AI
+
+Panel 增加 <AiSettings appStore={appStore} />
+
+新增文件： src/features/settings/AiSettings.tsx
+
+UI（最小可用版）：
+
+开关：enabled
+
+OpenAI-Compat 配置：apiEndpoint / apiKey / model / temperature / maxTokens / requestTimeoutMs
+
+Block 参与范围：
+
+从 settings.inputSettings.blocks 动态列出
+
+用多选/checkbox 保存到 enabledBlockIds
+
+提供按钮：“初始化为全部 block”
+
+多结果：
+
+allowMultipleResults / maxResults / confirmMode
+
+性能：
+
+preloadConfigOnStartup / configCacheTTLSeconds
+
+写回方式：复用你现有的 appStore._updateSettingsAndPersist(draft => { ... })
+
+1.3 抽取 getEffectiveTemplate 成通用工具
+
+这是后面 AI Snapshot / 运行时合成 / Theme 可用性判断的统一锚点，避免规则分叉。
+
+改造：
+
+把 src/features/quickinput/QuickInputModal.tsx 中的 getEffectiveTemplate(...) 移到：
+
+✅ 建议：src/core/utils/inputTemplateUtils.ts
+
+QuickInputModal.tsx 改为 import 使用（确保行为不变）
+
+可选再抽一个：
+
+getAvailableThemesForBlock(settings, blockId)（若你 QuickInput 里已经有“override 禁用 theme”的逻辑，也一起抽出来，AI snapshot 会更准）
+
+第二步：实现 AI 解析与命令闭环（复用 QuickInputModal 做确认 UI）
+
+产出：新增一个命令 AI: 自然语言快速记录（统一）
+流程：输入自然语言 → AI 返回一条/多条结构化命令 → 逐条打开 QuickInputModal 预填 → 用户确认保存 → executeTemplate 落盘。
+
+2.1 新增 AI 配置快照 + 缓存
+
+新增目录： src/core/ai/
+
+新增文件： src/core/ai/AiConfigSnapshot.ts
+
+快照只保留“给模型看的最小子集”，避免 prompt 过大：
+
+export interface AiBlockConfig {
+  id: string;
+  name: string;
+  fields: Array<{
+    key: string;
+    label: string;
+    type: string;
+    options?: Array<{ value: string; label: string }>;
+    defaultValue?: any;
+  }>;
+}
+
+export interface AiThemeConfig {
+  id: string;
+  path: string;
+}
+
+export interface AiConfigSnapshot {
+  blocks: AiBlockConfig[];
+  themes: AiThemeConfig[];
+}
+
+
+构建规则（结合你工程）：
+
+blocks 来源：settings.inputSettings.blocks
+
+fields：来自 effective template 的 fields（建议：对每个 block 用 getEffectiveTemplate(inputSettings, blockId, undefined) 取字段；如果你 fields 在 block 本身就已完整，也可直接用 block.fields）
+
+themes：settings.inputSettings.themes
+
+过滤 blocks：若 aiSettings.enabledBlockIds 有值 → 只保留这些
+
+新增文件： src/core/ai/AiConfigCache.ts
+
+TTL 缓存 snapshot
+
+提供 invalidate()
+
+在设置更新时是否强制 invalidate：先不做全局监听也行（MVP 下只靠 TTL + 重启即可）；你想严谨的话，再在 AppStore 更新 inputSettings 时调用 invalidate。
+
+2.2 新增 OpenAI-Compatible HTTP Client（你后接 Gemini）
+
+新增文件： src/core/ai/AiHttpClient.ts
+
+实现要点：
+
+POST {apiEndpoint}/chat/completions
+
+headers：Authorization: Bearer ${apiKey}
+
+body：{ model, temperature, max_tokens, messages }
+
+timeout：用 AbortController 支持 requestTimeoutMs
+
+输出：返回 assistant_message_content: string
+
+2.3 实现 NaturalLanguageRecordParser（核心 Prompt + JSON 解析）
+
+新增文件： src/core/ai/AiNaturalLanguageRecordParser.ts
+
+接口：
+
+export interface INaturalLanguageRecordParser {
+  parse(input: { text: string; now: Date }): Promise<NaturalRecordBatch>;
+}
+
+
+Prompt 关键约束（贴合你的 QuickInputForm）：
+
+fieldValues 的 key 必须是 TemplateField.key
+
+date/time 格式：
+
+date: YYYY-MM-DD
+
+time: HH:mm
+
+select/radio/rating：
+
+优先输出 option.value；如果只能输出 label 也可（你后面可做一次 label→value 映射兜底）
+
+输出必须是纯 JSON：NaturalRecordBatch
+
+解析策略：
+
+JSON.parse(raw)
+
+失败则截取第一个 { 到最后一个 } 再 parse
+
+仍失败 → 抛出可读错误（命令层弹 Notice + 提示用户重试/改写）
+
+2.4 命令：AI 自然语言快速记录（统一）
+
+新增 feature： src/features/aiinput/
+
+src/features/aiinput/registerCommands.ts
+
+src/features/aiinput/index.ts（导出 setup）
+
+src/app/FeatureLoader.ts 中加载该 feature（仿 quickinput）
+
+命令伪代码（MVP：单条/多条都“逐条确认”）：
+
+callback: async () => {
+  const s = appStore.getSettings();
+  if (!s.aiSettings?.enabled) return Notice(...);
+
+  // 1) 让用户输入自然语言
+  const text = await promptModal(); // 你可以先做个简单 Modal
+
+  // 2) parser.parse -> batch
+  const batch = await parser.parse({ text, now: new Date() });
+
+  // 3) 对每条结果：直接复用 QuickInputModal 做确认 UI
+  //    关键：把 AI fieldValues 作为 context 传给 QuickInputModal
+  for (const cmd of batch.items.slice(0, s.aiSettings.maxResults)) {
+    new QuickInputModal(app, cmd.target.blockId, cmd.fieldValues, cmd.target.themeId).open();
+    // 用户点保存 -> inputService.executeTemplate(...) 已执行
+    // 用户取消 -> 不保存
+  }
+}
+
+
+这一步几乎不需要写“确认 UI”新轮子，因为 QuickInputModal 本身已经是“确认+编辑+保存”。
+
+2.5 第二步的“完成标准”（你可以按这个验收）
+
+AI Tab 能配置并持久化（重启后仍存在）
+
+命令能弹出输入框，输入一句自然语言
+
+能自动选择 blockId/themeId（至少 block 选择准确）
+
+QuickInputModal 打开时字段已预填（靠 context[key]）
+
+用户点保存 → 文件写入与 Item 更新都正常（沿用 executeTemplate）
+
+多条结果时：会依次弹出多个 QuickInputModal，用户可逐条取消/保存
+
+
+第二步：实现 AI 解析与命令闭环（复用 QuickInputModal 做确认 UI）
+目标与验收
+
+目标：
+
+新增命令：AI: 自然语言快速记录（统一）
+
+用户输入自然语言 → AI 输出结构化 NaturalRecordBatch
+
+对每条结果：new QuickInputModal(app, blockId, fieldValues, themeId).open()
+让用户确认/编辑/保存（复用现有保存逻辑）
+
+验收：
+
+命令可用；2) AI 能返回 JSON 并成功 parse；3) QuickInputModal 预填生效；4) 保存落盘正常；5) 多条时逐条弹窗可取消/保存。
+
+2.1 新增 src/core/ai/ 目录与快照缓存
+TODO 2.1.1 新建 src/core/ai/AiConfigSnapshot.ts
+
+**职责：**把 inputSettings + aiSettings(enabledBlockIds) 转成模型可读的最小快照。
+
+// src/core/ai/AiConfigSnapshot.ts
+import type { InputSettings, ThinkSettings } from "src/core/types/schema";
+import type { AiSettings } from "src/core/types/ai-schema";
+import { getEffectiveTemplate } from "src/core/utils/inputTemplateUtils";
+
+export interface AiBlockConfigField {
+  key: string;
+  label: string;
+  type: string;
+  options?: Array<{ value: string; label: string }>;
+  defaultValue?: any;
+}
+
+export interface AiBlockConfig {
+  id: string;
+  name: string;
+  fields: AiBlockConfigField[];
+}
+
+export interface AiThemeConfig {
+  id: string;
+  path: string;
+}
+
+export interface AiConfigSnapshot {
+  blocks: AiBlockConfig[];
+  themes: AiThemeConfig[];
+}
+
+export function buildAiConfigSnapshot(input: InputSettings, ai: AiSettings): AiConfigSnapshot {
+  const enabledSet = ai.enabledBlockIds?.length ? new Set(ai.enabledBlockIds) : null;
+
+  const blocks = input.blocks
+    .filter(b => !enabledSet || enabledSet.has(b.id))
+    .map(b => {
+      // 用你抽出来的 getEffectiveTemplate 来拿字段（最贴合实际 override）
+      const effective = getEffectiveTemplate(input, b.id, undefined);
+      const fields = (effective?.fields ?? b.fields ?? []).map(f => ({
+        key: f.key,
+        label: f.label,
+        type: f.type,
+        options: (f.options ?? []).map((o: any) => ({ value: o.value, label: o.label })),
+        defaultValue: (f as any).defaultValue,
+      }));
+      return { id: b.id, name: b.name, fields };
+    });
+
+  const themes = input.themes.map(t => ({ id: t.id, path: t.path }));
+
+  return { blocks, themes };
+}
+
+
+注：如果 getEffectiveTemplate 返回 null，fallback b.fields。
+
+TODO 2.1.2 新建 src/core/ai/AiConfigCache.ts
+
+**职责：**TTL 缓存 snapshot，避免每次调用模型都重新拼大段 prompt。
+
+// src/core/ai/AiConfigCache.ts
+import type { ISettingsProvider } from "src/core/services/settings/ISettingsProvider";
+import { buildAiConfigSnapshot, type AiConfigSnapshot } from "./AiConfigSnapshot";
+
+export class AiConfigCache {
+  private snapshot: AiConfigSnapshot | null = null;
+  private lastUpdated = 0;
+
+  constructor(private settingsProvider: ISettingsProvider) {}
+
+  getSnapshot(): AiConfigSnapshot {
+    const settings = this.settingsProvider.getSettings();
+    const ai = settings.aiSettings;
+    if (!ai) throw new Error("AI settings missing");
+
+    const ttlMs = (ai.configCacheTTLSeconds ?? 300) * 1000;
+    const now = Date.now();
+
+    if (!this.snapshot || now - this.lastUpdated > ttlMs) {
+      this.snapshot = buildAiConfigSnapshot(settings.inputSettings, ai);
+      this.lastUpdated = now;
+    }
+    return this.snapshot;
+  }
+
+  invalidate() {
+    this.snapshot = null;
+    this.lastUpdated = 0;
+  }
+}
+
+
+MVP 可不做自动 invalidate，先靠 TTL。
+
+2.2 新增 OpenAI-Compatible HTTP Client（你接 Gemini / 代理也 OK）
+TODO 2.2.1 新建 src/core/ai/AiHttpClient.ts
+// src/core/ai/AiHttpClient.ts
+export type OpenAIChatMessage = { role: "system" | "user" | "assistant"; content: string };
+
+export interface ChatCompletionRequest {
+  baseURL: string;         // 例如 https://xxx/v1
+  apiKey: string;
+  model: string;
+  temperature: number;
+  max_tokens: number;
+  messages: OpenAIChatMessage[];
+  timeoutMs: number;
+}
+
+export class AiHttpClient {
+  async chatCompletion(req: ChatCompletionRequest): Promise<string> {
+    const url = req.baseURL.replace(/\/$/, "") + "/chat/completions";
+
+    const controller = new AbortController();
+    const t = setTimeout(() => controller.abort(), req.timeoutMs);
+
+    try {
+      const res = await fetch(url, {
+        method: "POST",
+        headers: {
+          "Content-Type": "application/json",
+          "Authorization": `Bearer ${req.apiKey}`,
+        },
+        body: JSON.stringify({
+          model: req.model,
+          temperature: req.temperature,
+          max_tokens: req.max_tokens,
+          messages: req.messages,
+        }),
+        signal: controller.signal,
+      });
+
+      if (!res.ok) {
+        const text = await res.text().catch(() => "");
+        throw new Error(`AI HTTP ${res.status}: ${text}`);
+      }
+
+      const json = await res.json();
+      const content = json?.choices?.[0]?.message?.content;
+      if (!content) throw new Error("AI returned empty content");
+      return content;
+    } finally {
+      clearTimeout(t);
+    }
+  }
+}
+
+
+如果你后面想更稳：可改成 Obsidian 的 requestUrl，但 MVP 用 fetch 就能跑。
+
+2.3 实现解析器 AiNaturalLanguageRecordParser
+TODO 2.3.1 新建 src/core/ai/AiNaturalLanguageRecordParser.ts
+import type { INaturalLanguageRecordParser } from "./INaturalLanguageRecordParser";
+import type { NaturalRecordBatch } from "src/core/types/ai-schema";
+import type { ISettingsProvider } from "src/core/services/settings/ISettingsProvider";
+import { AiConfigCache } from "./AiConfigCache";
+import { AiHttpClient } from "./AiHttpClient";
+
+function safeJsonParseBatch(raw: string): NaturalRecordBatch {
+  try {
+    return JSON.parse(raw);
+  } catch {
+    const start = raw.indexOf("{");
+    const end = raw.lastIndexOf("}");
+    if (start >= 0 && end > start) {
+      const sliced = raw.slice(start, end + 1);
+      return JSON.parse(sliced);
+    }
+    throw new Error("AI output is not valid JSON");
+  }
+}
+
+export class AiNaturalLanguageRecordParser implements INaturalLanguageRecordParser {
+  constructor(
+    private settingsProvider: ISettingsProvider,
+    private cache: AiConfigCache,
+    private http: AiHttpClient
+  ) {}
+
+  async parse(input: { text: string; now: Date }): Promise<NaturalRecordBatch> {
+    const settings = this.settingsProvider.getSettings();
+    const ai = settings.aiSettings;
+    if (!ai?.enabled) throw new Error("AI is disabled");
+
+    const snapshot = this.cache.getSnapshot();
+    const nowIso = input.now.toISOString();
+
+    const system = [
+      "You are a parser that converts natural language into Think plugin record commands.",
+      "Return ONLY valid JSON. No markdown. No explanations.",
+      "Output schema: { items: NaturalRecordCommand[] }",
+      "NaturalRecordCommand:",
+      "- target.blockId must match one of snapshot.blocks[].id",
+      "- target.themeId must match snapshot.themes[].id or be omitted",
+      "- fieldValues keys must be TemplateField.key (from snapshot.blocks[].fields[].key)",
+      "- date fields: YYYY-MM-DD, time fields: HH:mm",
+      "- select/radio/rating: prefer option.value; label is acceptable if unsure",
+    ].join("\n");
+
+    const user = [
+      `Now: ${nowIso}`,
+      `Max results: ${ai.allowMultipleResults ? ai.maxResults : 1}`,
+      "Snapshot JSON:",
+      JSON.stringify(snapshot),
+      "User text:",
+      input.text,
+      "Return JSON now."
+    ].join("\n\n");
+
+    const raw = await this.http.chatCompletion({
+      baseURL: ai.apiEndpoint,
+      apiKey: ai.apiKey,
+      model: ai.model,
+      temperature: ai.temperature,
+      max_tokens: ai.maxTokens,
+      timeoutMs: ai.requestTimeoutMs ?? 20000,
+      messages: [
+        { role: "system", content: system },
+        { role: "user", content: user },
+      ],
+    });
+
+    const batch = safeJsonParseBatch(raw);
+
+    // 兜底：若不允许多结果，截断为 1
+    if (!ai.allowMultipleResults && batch.items.length > 1) {
+      batch.items = batch.items.slice(0, 1);
+    }
+    // 兜底：maxResults
+    if (ai.maxResults && batch.items.length > ai.maxResults) {
+      batch.items = batch.items.slice(0, ai.maxResults);
+    }
+    return batch;
+  }
+}
+
+TODO 2.3.2 新建接口文件 src/core/ai/INaturalLanguageRecordParser.ts
+import type { NaturalRecordBatch } from "src/core/types/ai-schema";
+
+export interface INaturalLanguageRecordParser {
+  parse(input: { text: string; now: Date }): Promise<NaturalRecordBatch>;
+}
+
+2.4 DI 注册（让命令层能拿到 parser/cache/http）
+
+你项目用 tsyringe，核心注册在 src/core/di/setupCore.ts（或类似）。
+
+TODO 2.4.1 修改 src/core/di/setupCore.ts
+
+注册（示意）：
+
+import { AiConfigCache } from "src/core/ai/AiConfigCache";
+import { AiHttpClient } from "src/core/ai/AiHttpClient";
+import { AiNaturalLanguageRecordParser } from "src/core/ai/AiNaturalLanguageRecordParser";
+
+container.registerSingleton(AiConfigCache);
+container.registerSingleton(AiHttpClient);
+container.registerSingleton(AiNaturalLanguageRecordParser);
+
+
+settingsProvider 你已经通过 SettingsProviderToken -> AppStore 注册好了，AiConfigCache/AiParser 构造时会拿到。
+
+2.5 新增命令 Feature（最小闭环）
+TODO 2.5.1 新建 feature 目录
+
+src/features/aiinput/index.ts
+
+src/features/aiinput/registerCommands.ts
+
+TODO 2.5.2 新建一个简单输入 Modal（MVP）
+
+你可以先用 Obsidian 的 Modal，放一个 textarea：
+
+新增文件： src/features/aiinput/AiTextPromptModal.ts
+
+返回 Promise<string|null>。
+
+（这里我不贴太长 UI 代码，你照 QuickInputModal 的写法即可：textarea + buttons）
+
+TODO 2.5.3 实现 registerCommands（逐条弹 QuickInputModal）
+
+文件： src/features/aiinput/registerCommands.ts
+
+核心流程：
+
+import { Notice } from "obsidian";
+import { QuickInputModal } from "src/features/quickinput/QuickInputModal";
+import { AiTextPromptModal } from "./AiTextPromptModal";
+import { AiNaturalLanguageRecordParser } from "src/core/ai/AiNaturalLanguageRecordParser";
+
+export function registerAiInputCommands(deps: {
+  plugin: any;
+  app: any;
+  appStore: any;
+  container: any; // 你项目里获取 container 的方式
+}) {
+  const { plugin, app, appStore, container } = deps;
+
+  plugin.addCommand({
+    id: "think-ai-natural-input",
+    name: "AI: 自然语言快速记录（统一）",
+    callback: async () => {
+      const settings = appStore.getSettings();
+      const ai = settings.aiSettings;
+      if (!ai?.enabled) {
+        new Notice("AI 快速记录未启用，请在设置中开启", 4000);
+        return;
+      }
+
+      const text = await new AiTextPromptModal(app).openAndGetValue();
+      if (!text?.trim()) return;
+
+      const parser = container.resolve(AiNaturalLanguageRecordParser);
+
+      let batch;
+      try {
+        batch = await parser.parse({ text, now: new Date() });
+      } catch (e: any) {
+        new Notice(`AI 解析失败：${e?.message ?? e}`, 6000);
+        return;
+      }
+
+      if (!batch.items?.length) {
+        new Notice("AI 未能识别出可记录内容，请换种说法再试", 5000);
+        return;
+      }
+
+      // MVP：逐条确认 -> 复用 QuickInputModal
+      for (const cmd of batch.items) {
+        // QuickInputModal 已支持 context + themeId 预选（按你描述）
+        new QuickInputModal(app, cmd.target.blockId, cmd.fieldValues, cmd.target.themeId).open();
+      }
+    },
+  });
+}
+
+TODO 2.5.4 在 FeatureLoader 加载 AI feature
+
+文件： src/app/FeatureLoader.ts
+
+模仿 quickinput 的加载方式：
+
+import aiinput/setup
+
+在 loadFeatures() 中调用 loadAiInputFeature()
+
+2.6 第二步的“已知限制（MVP 接受）”
+
+多条确认：不是列表 UI，而是依次弹 QuickInputModal（最省工，且满足“写入前确认”）
+
+若 AI 输出 select/radio 的 label 而不是 value：先接受（后续可加映射）
+
+snapshot 体积：blocks/fields 多时 prompt 变大（先靠 enabledBlockIds + TTL）
+
+2.7 第二步完成后的下一步（不在本次范围）
+
+真正的 Batch 列表确认 UI（左列表右编辑）
+
+label→value 映射、字段类型校验/修正
+
+在 QuickInputModal 打开前做一次 themeId 合法性校验（不存在就 drop）
+
+settings 变更时 cache.invalidate
